[package]
name = "browser-panic-hook"
version = "0.1.0"
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
description = "A panic hook for frontend applications"
repository = "https://github.com/ctron/browser-panic-hook"

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "HtmlElement",
    "Window"
]

[dev-dependencies]
yew = { version = "0.20", features = ["csr"] }