[package]
name = "example"
version = "0.1.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
description = "Example of the browser panic hook"
repository = "https://github.com/ctron/browser-panic-hook"

[dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
gloo-events = "0.1"
gloo-utils = "0.1"

browser-panic-hook = { path = ".." }

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlElement",
]

# release profile settings to reduce the final binary size
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true
